todoapp-ui/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaggi-todoappui-service
  namespace: gagan
spec:
  type: ClusterIP
  selector:
    app: todo-app-ui
  ports:
  - port: 80
    targetPort: 80
