todoapp-ui/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoui-ingress
  namespace: gagan
  annotations:
  #  kubernetes.io/ingress.class: addon-http-application-routing
   kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: gaggi-todoappui-service.gaggidevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gaggi-todoappui-service
            port: 
              number: 80
